# swagger_server/models/report_sale.py
@@ -1,0 +1,246 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.customer import Customer  # noqa: F401,E501
+from swagger_server.models.product import Product  # noqa: F401,E501
+from swagger_server import util
+
+
+class ReportSale(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, id: int=None, product: Product=None, customer: Customer=None, sale_date: date=None, quantity: int=None, unit_price: str=None, commission_pct: str=None, commission: str=None):  # noqa: E501
+        """ReportSale - a model defined in Swagger
+
+        :param id: The id of this ReportSale.  # noqa: E501
+        :type id: int
+        :param product: The product of this ReportSale.  # noqa: E501
+        :type product: Product
+        :param customer: The customer of this ReportSale.  # noqa: E501
+        :type customer: Customer
+        :param sale_date: The sale_date of this ReportSale.  # noqa: E501
+        :type sale_date: date
+        :param quantity: The quantity of this ReportSale.  # noqa: E501
+        :type quantity: int
+        :param unit_price: The unit_price of this ReportSale.  # noqa: E501
+        :type unit_price: str
+        :param commission_pct: The commission_pct of this ReportSale.  # noqa: E501
+        :type commission_pct: str
+        :param commission: The commission of this ReportSale.  # noqa: E501
+        :type commission: str
+        """
+        self.swagger_types = {
+            'id': int,
+            'product': Product,
+            'customer': Customer,
+            'sale_date': date,
+            'quantity': int,
+            'unit_price': str,
+            'commission_pct': str,
+            'commission': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'product': 'product',
+            'customer': 'customer',
+            'sale_date': 'sale_date',
+            'quantity': 'quantity',
+            'unit_price': 'unit_price',
+            'commission_pct': 'commission_pct',
+            'commission': 'commission'
+        }
+        self._id = id
+        self._product = product
+        self._customer = customer
+        self._sale_date = sale_date
+        self._quantity = quantity
+        self._unit_price = unit_price
+        self._commission_pct = commission_pct
+        self._commission = commission
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ReportSale':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ReportSale of this ReportSale.  # noqa: E501
+        :rtype: ReportSale
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this ReportSale.
+
+
+        :return: The id of this ReportSale.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this ReportSale.
+
+
+        :param id: The id of this ReportSale.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def product(self) -> Product:
+        """Gets the product of this ReportSale.
+
+
+        :return: The product of this ReportSale.
+        :rtype: Product
+        """
+        return self._product
+
+    @product.setter
+    def product(self, product: Product):
+        """Sets the product of this ReportSale.
+
+
+        :param product: The product of this ReportSale.
+        :type product: Product
+        """
+
+        self._product = product
+
+    @property
+    def customer(self) -> Customer:
+        """Gets the customer of this ReportSale.
+
+
+        :return: The customer of this ReportSale.
+        :rtype: Customer
+        """
+        return self._customer
+
+    @customer.setter
+    def customer(self, customer: Customer):
+        """Sets the customer of this ReportSale.
+
+
+        :param customer: The customer of this ReportSale.
+        :type customer: Customer
+        """
+
+        self._customer = customer
+
+    @property
+    def sale_date(self) -> date:
+        """Gets the sale_date of this ReportSale.
+
+
+        :return: The sale_date of this ReportSale.
+        :rtype: date
+        """
+        return self._sale_date
+
+    @sale_date.setter
+    def sale_date(self, sale_date: date):
+        """Sets the sale_date of this ReportSale.
+
+
+        :param sale_date: The sale_date of this ReportSale.
+        :type sale_date: date
+        """
+
+        self._sale_date = sale_date
+
+    @property
+    def quantity(self) -> int:
+        """Gets the quantity of this ReportSale.
+
+
+        :return: The quantity of this ReportSale.
+        :rtype: int
+        """
+        return self._quantity
+
+    @quantity.setter
+    def quantity(self, quantity: int):
+        """Sets the quantity of this ReportSale.
+
+
+        :param quantity: The quantity of this ReportSale.
+        :type quantity: int
+        """
+
+        self._quantity = quantity
+
+    @property
+    def unit_price(self) -> str:
+        """Gets the unit_price of this ReportSale.
+
+
+        :return: The unit_price of this ReportSale.
+        :rtype: str
+        """
+        return self._unit_price
+
+    @unit_price.setter
+    def unit_price(self, unit_price: str):
+        """Sets the unit_price of this ReportSale.
+
+
+        :param unit_price: The unit_price of this ReportSale.
+        :type unit_price: str
+        """
+
+        self._unit_price = unit_price
+
+    @property
+    def commission_pct(self) -> str:
+        """Gets the commission_pct of this ReportSale.
+
+
+        :return: The commission_pct of this ReportSale.
+        :rtype: str
+        """
+        return self._commission_pct
+
+    @commission_pct.setter
+    def commission_pct(self, commission_pct: str):
+        """Sets the commission_pct of this ReportSale.
+
+
+        :param commission_pct: The commission_pct of this ReportSale.
+        :type commission_pct: str
+        """
+
+        self._commission_pct = commission_pct
+
+    @property
+    def commission(self) -> str:
+        """Gets the commission of this ReportSale.
+
+
+        :return: The commission of this ReportSale.
+        :rtype: str
+        """
+        return self._commission
+
+    @commission.setter
+    def commission(self, commission: str):
+        """Sets the commission of this ReportSale.
+
+
+        :param commission: The commission of this ReportSale.
+        :type commission: str
+        """
+
+        self._commission = commission
