# swagger_server/swagger/swagger.yaml
@@ -232,14 +232,24 @@ paths:
       description: Get list of sales
       operationId: get_sales
       parameters:
-      - name: customerID
+      - name: begin_date
         in: query
-        description: Customer ID
+        description: Begin Date
         required: false
         style: form
-        explode: true
+        explode: false
         schema:
           type: string
+          format: date
+      - name: end_date
+        in: query
+        description: End Date
+        required: false
+        style: form
+        explode: false
+        schema:
+          type: string
+          format: date
       responses:
         "200":
           description: Successful operation
@@ -248,7 +258,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Sale'
+                  $ref: '#/components/schemas/DetailedSale'
                 x-content-type: application/json
       x-openapi-router-controller: swagger_server.controllers.sale_controller
   /sale/{id}:
@@ -272,7 +282,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Sale'
+                $ref: '#/components/schemas/DetailedSale'
         "404":
           description: Not found
       x-openapi-router-controller: swagger_server.controllers.sale_controller
@@ -296,6 +306,45 @@ paths:
               schema:
                 $ref: '#/components/schemas/Sale'
       x-openapi-router-controller: swagger_server.controllers.sale_controller
+  /report/{id}:
+    get:
+      tags:
+      - salesperson
+      summary: Quarterly Report
+      operationId: quarterly_report
+      parameters:
+      - name: id
+        in: path
+        description: Salesperson ID
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: year
+        in: query
+        description: Year
+        required: true
+        style: form
+        explode: false
+        schema:
+          type: string
+      - name: quarter
+        in: query
+        description: Quarter
+        required: true
+        style: form
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Report'
+      x-openapi-router-controller: swagger_server.controllers.salesperson_controller
 components:
   schemas:
     Product:
@@ -396,7 +445,7 @@ components:
           type: integer
         salesperson_id:
           type: integer
-        sales_date:
+        sale_date:
           type: string
           format: date
         quantity:
@@ -404,8 +453,173 @@ components:
       example:
         salesperson_id: 5
         quantity: 5
-        sales_date: 2000-01-23
+        sale_date: 2000-01-23
         product_id: 6
         id: 0
         customer_id: 1
+    DetailedSale:
+      type: object
+      properties:
+        id:
+          type: integer
+        product:
+          $ref: '#/components/schemas/Product'
+        customer:
+          $ref: '#/components/schemas/Customer'
+        salesperson:
+          $ref: '#/components/schemas/Salesperson'
+        sale_date:
+          type: string
+          format: date
+        quantity:
+          type: integer
+      example:
+        product:
+          commission_pct: commission_pct
+          quantity: 6
+          name: name
+          purchase_price: purchase_price
+          style: style
+          id: 0
+          sale_price: sale_price
+          manufacturer: manufacturer
+        quantity: 6
+        salesperson:
+          end_date: 2000-01-23
+          firstname: fehguy
+          address: address
+          manager: manager
+          phone: phone
+          begin_date: 2000-01-23
+          id: 0
+          lastname: lastname
+        sale_date: 2000-01-23
+        id: 0
+        customer:
+          firstname: fehguy
+          address: address
+          phone: phone
+          begin_date: 2000-01-23
+          id: 0
+          lastname: lastname
+    ReportSale:
+      type: object
+      properties:
+        id:
+          type: integer
+        product:
+          $ref: '#/components/schemas/Product'
+        customer:
+          $ref: '#/components/schemas/Customer'
+        sale_date:
+          type: string
+          format: date
+        quantity:
+          type: integer
+        unit_price:
+          type: string
+        commission_pct:
+          type: string
+        commission:
+          type: string
+      example:
+        product:
+          commission_pct: commission_pct
+          quantity: 6
+          name: name
+          purchase_price: purchase_price
+          style: style
+          id: 0
+          sale_price: sale_price
+          manufacturer: manufacturer
+        commission_pct: commission_pct
+        quantity: 6
+        sale_date: 2000-01-23
+        commission: commission
+        id: 0
+        unit_price: unit_price
+        customer:
+          firstname: fehguy
+          address: address
+          phone: phone
+          begin_date: 2000-01-23
+          id: 0
+          lastname: lastname
+    Report:
+      type: object
+      properties:
+        salesperson:
+          $ref: '#/components/schemas/Salesperson'
+        year:
+          type: string
+          format: year
+        quarter:
+          type: string
+        sales:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReportSale'
+        total_sales:
+          type: string
+        total_commission:
+          type: string
+      example:
+        salesperson:
+          end_date: 2000-01-23
+          firstname: fehguy
+          address: address
+          manager: manager
+          phone: phone
+          begin_date: 2000-01-23
+          id: 0
+          lastname: lastname
+        total_commission: total_commission
+        year: year
+        total_sales: total_sales
+        sales:
+        - product:
+            commission_pct: commission_pct
+            quantity: 6
+            name: name
+            purchase_price: purchase_price
+            style: style
+            id: 0
+            sale_price: sale_price
+            manufacturer: manufacturer
+          commission_pct: commission_pct
+          quantity: 6
+          sale_date: 2000-01-23
+          commission: commission
+          id: 0
+          unit_price: unit_price
+          customer:
+            firstname: fehguy
+            address: address
+            phone: phone
+            begin_date: 2000-01-23
+            id: 0
+            lastname: lastname
+        - product:
+            commission_pct: commission_pct
+            quantity: 6
+            name: name
+            purchase_price: purchase_price
+            style: style
+            id: 0
+            sale_price: sale_price
+            manufacturer: manufacturer
+          commission_pct: commission_pct
+          quantity: 6
+          sale_date: 2000-01-23
+          commission: commission
+          id: 0
+          unit_price: unit_price
+          customer:
+            firstname: fehguy
+            address: address
+            phone: phone
+            begin_date: 2000-01-23
+            id: 0
+            lastname: lastname
+        quarter: quarter
 
